# pymax

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  cspell.config.yaml  pyproject.toml  python-project.code-workspace
.github/: dependabot.yml
src/: README
src/pymax/: __about__.py  __init__.py
src/pymax/gui/: __init__.py  menu.py  qt.py
src/python_package/: __init__.py
